--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <h1>Calculator</h1>
-<p><input  type="text" id="nOne"  ></p>
+<p><input  type="text" id="nOne"></p>
 <p><input  type="text" id="nTwo"></p>
 <div>
 <button onclick="add()">+</button>
 <button onclick="subtract()">-</button>
 <button onclick="multiply()">*</button>
-<button onclick="division()">/</button>
+<button onclick="divide()">/</button>
 </div>
 <p id="out">Result</p>
 <script src="js/index.js"></script>
